[JP-2521] Fix for the labels not showing correctly in production mode.

--- a/copl/com.elster.jupiter.unifyingjs/src/main/web/js/uni/sass/etc/all.scss
+++ b/copl/com.elster.jupiter.unifyingjs/src/main/web/js/uni/sass/etc/all.scss
@@ -330,22 +330,6 @@
     }
 }
 
-// Forms
-
-.uni-form-item-bold {
-    font-weight: bold;
-}
-
-.x-form-item-label {
-    padding-right: 14px;
-}
-
-.uni-form-item-label-required {
-    background-image: url($resourcesDir + 'images/form/mandatory.png');
-    background-repeat: no-repeat;
-    background-position: right;
-}
-
 // Panels
 
 .x-panel {
